--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -80,8 +80,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="/cl-cpcll" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+ <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="/cl-cpcll" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -96,8 +96,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Esplanade-Theatres-on-the-Bay-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;"> 阅览展板 </a>
+ <a href="/Esplanade-Theatres-on-the-Bay-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -113,8 +113,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Lee-Kuan-Yew-Fund-for-Bilingualism-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+ <a href="/Lee-Kuan-Yew-Fund-for-Bilingualism-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -130,8 +130,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+ <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -145,8 +145,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Mediacorp-TV-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;"> 阅览展板 </a>
+ <a href="/Mediacorp-TV-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -160,8 +160,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/National-Heritage-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;"> 阅览展板 </a>
+ <a href="/National-Heritage-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -175,8 +175,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/National-Institute-of-Education-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板 </a>
+ <a href="/National-Institute-of-Education-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -192,8 +192,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/National-Library-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+ <a href="/National-Library-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -208,8 +208,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="/cl-sccl" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+ <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="/cl-sccl" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -225,8 +225,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Singapore-Federation-of-Chinese-Clan-Associations-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
+ <a href="/Singapore-Federation-of-Chinese-Clan-Associations-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -242,8 +242,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/ZBSchools-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+ <a href="/ZBSchools-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
