--- a/pages/高中.md
+++ b/pages/高中.md
@@ -242,15 +242,15 @@ width:80%;
   </div>
   </div>
  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译相关链接</h4>
-<a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准 [PDF]</a>&nbsp;&nbsp;
+<a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准 [PDF]</a><br>
    <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">MCI奖学金链接</a>
 <p style="font-size:25px;font-family:KaiTi;">大学相关科系链接：</p>
  <div class="clearfix">
   <div class="img-container2">
  <a href="https://www.ntu.edu.sg/soh/admissions/mti" class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">NTU M.A. Translation and Interpretation</a>
-&nbsp;&nbsp;
+<br>
  <a href="https://fass.nus.edu.sg/chs/minor/" class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">SUSS BA Translation and Interpretation</a>
-&nbsp;&nbsp;
+<br>
  <a href="https://www.ntu.edu.sg/soh/admissions/mti " class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">NTU M.A. Translation and Interpretation</a>
  <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识</h4>
@@ -259,9 +259,9 @@ width:80%;
   <div class="clearfix">
   <div class="img-container2">
 <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn01" style="color:#fff;font-family:KaiTi;">北京大学国际关系学院</a>
-&nbsp;
+<br>
  <a href="https://fass.nus.edu.sg/globalstudies/" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NUS FASS Global Studies Programme</a>
-&nbsp;
+		<br>
   <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NTU Masters of Social Sciences in China and Global Governance</a>
   <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文课程数码资源</h4>
