--- a/pages/高中.md
+++ b/pages/高中.md
@@ -131,9 +131,9 @@ padding: 26px;
     padding: 13px 13px;
     border-radius: 6px;
     text-align: center;
-    display: block;
+    display: inline-block;
     margin-left: 26px;
-    width:35%;
+    width:20%;
   }
   .btn02 {
     font-size: 18px;
