--- a/pages/菩提学校.md
+++ b/pages/菩提学校.md
@@ -3,7 +3,7 @@ title: 菩提学校
 permalink: /cl-Maha-Bodhi-Exhibition
 description: ""
 ---
- <style>
+<style>
        .btntop {
     position: fixed;
     float: right;
@@ -32,7 +32,7 @@ description: ""
 }
  </style>
  <p><a href="/exhibits/chinese-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br /></p>
-<h4 style="font-size:40px;font-family:KaiTi;color:#d14165;">菩提学校</h4>
+<h4 style="font-size:40px;font-family:KaiTi;color:#d14165;">字谜花园</h4>
 <p><img src="/images/Posters/MTLS_Maha-Bodi_v3.jpg" />
 <br /><br /><br /></p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
