--- a/pages/李光耀双语基金.md
+++ b/pages/李光耀双语基金.md
@@ -3,3 +3,37 @@ title: 李光耀双语基金
 permalink: /cl-LKYFB-Exhibition
 description: ""
 ---
+ <style>
+       .btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+  .backbtn{
+   margin-left: -100px;
+   border: none;
+  text-align: left;
+  width: 20%;
+  font-family:Lato,sans-serif;
+  } 
+@media only screen and (max-width: 600px) {
+.backbtn {
+   margin-left: 6px;
+  }
+}
+ </style>
+ <p><a href="/exhibits/chinese-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br /></p>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d84178;">播下热爱母语的种子！</h4>
+<p><img src="/images/Posters/04 LKYFB CL V3.jpg" />
+<br /><br /></p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
