--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -96,7 +96,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Maha-Bodhi-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
+  <a href="/cl-Maha-Bodhi-Exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -158,7 +158,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Punggol-Secondary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
+  <a href="/cl-Punggol-Sec-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -175,7 +175,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Jurong-Secondary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
+  <a href="/cl-Jurong-Sec-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
