--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -114,7 +114,8 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Lee-Kuan-Yew-Fund-for-Bilingualism-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
+  <a href="
+/cl-LKYFB-Exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -193,7 +194,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/National-Library-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
+  <a href="/cl-NLB-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
