--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
@@ -116,7 +116,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/tl-PCF-Sparkletots-Preschool-Chua-Chu-Kang-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
-  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span> </a>
+  <a href="/tl-CCK-presch-exhibition" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span> </a>
   </div></td>
     </tr>
 </table>
