--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
@@ -99,7 +99,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/tl-Lee-Kuan-Yew-Fund-for-Bilingualism" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
-  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
+  <a href="/TL-LKYFB-Exhibition" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -173,7 +173,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/tl-NLB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
-  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
+  <a href="/TL-NLB-exhibition" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
