Update file: பாலர் பள்ளிகள்.md

--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
@@ -111,7 +111,7 @@ text-decoration:none;
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்<br/>ம.செ.க. சமூக அறநிறுவனம் ஸ்பார்கல்டாட்ஸ் பாலர் பள்ளி 
 சுவா சூ காங் புளோக் 10<br/>
-<span style="font-family:Lato,sans-serif;">[PCF Sparkletots Preschool @ Chua Chu Kang Blk 10]</span></td>
+<span style="font-family:Lato,sans-serif;">[PCF Sparkletots @ Chua Chu Kang Blk 10]</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
@@ -127,7 +127,7 @@ text-decoration:none;
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">
 வேற்றுமையில் ஒற்றுமை<br />ம.செ.க. சமூக அறநிறுவனம் ஸ்பார்கல்டாட்ஸ் பாலர் பள்ளி 
 பொங்கோல் கரை 174D<br/>
-	<span style="font-family:Lato,sans-serif;">[PCF Sparkletots Preschool @ Punggol Shore Blk 174D]</span> </td>
+	<span style="font-family:Lato,sans-serif;">[PCF Sparkletots @ Punggol Shore Blk 174D]</span> </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
