--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
@@ -81,7 +81,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Esplanade-Theatres-on-the-Bay" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-Esplanade-Theatres-on-the-Bay" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக்<br/> காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -98,7 +98,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Lee-Kuan-Yew-Fund-for-Bilingualism" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-Lee-Kuan-Yew-Fund-for-Bilingualism" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக்<br/> காண</span></a>
   <a href="/TL-LKYFB-Exhibition" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -113,7 +113,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Mandai-Wildlife-Group" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-Mandai-Wildlife-Group" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -128,7 +128,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Mediacorp" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-Mediacorp" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -142,7 +142,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-NHB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-NHB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -157,7 +157,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-NIE" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-NIE" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -172,7 +172,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-NLB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-NLB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="/TL-NLB-exhibition" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -187,7 +187,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-TLLPC" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-TLLPC" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -202,7 +202,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Tamil-Murasu" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-Tamil-Murasu" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
@@ -216,7 +216,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-UPTLC" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+ <a href="/tl-UPTLC" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் <br/>காண</span></a>
   <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
