--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -78,7 +78,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/MK-Horizon-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
+  <a href="/cl-MK-Horizon-exhibition" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -95,7 +95,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/MK-Wellington-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
+  <a href="cl-MK-Wellington-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -157,7 +157,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Tzu-Chi-Great-Love-Preschool-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
+  <a href="/cl-Tzu-Chi-Great-Love-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td></tr>
 		</table>
 	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
