--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -79,7 +79,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Woodgrove-Primary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
+  <a href="/cl-Woodgrove-Primary-School-exhibition" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -141,7 +141,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/First-Toa-Payoh-Primary-School-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板 </a>
+  <a href="/cl-First-Toa-Payoh-Primary-School-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
