--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -97,7 +97,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Esplanade-Theatres-on-the-Bay-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;"> 阅览展板 </a>
+  <a href="/cl-Esplanade-Theatres-on-the-Bay-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -132,7 +132,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
+  <a href="/cl-Mandai-Wildlife-Reserve-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -147,7 +147,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Mediacorp-TV-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;"> 阅览展板 </a>
+  <a href="/cl-Mediacorp-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -162,7 +162,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/National-Heritage-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板 </a>
+  <a href="/cl-NHB-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -177,7 +177,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/National-Institute-of-Education-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板 </a>
+  <a href="/cl-NIE-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -227,7 +227,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Singapore-Federation-of-Chinese-Clan-Associations-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
+  <a href="/cl-SFCCA-exhibition" class="btn2" style="color:#fff;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -244,7 +244,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/ZBSchools-synopses" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
+  <a href="/cl-ZBSchools-exhibition" class="btn2" style="color:#fff;font-family:KaiTi;font-size:22px;">阅览展板</a>
   </div></td>
     </tr>
 </table>
