--- a/_exhibits/华文学习展示区/教育部课程.md
+++ b/_exhibits/华文学习展示区/教育部课程.md
@@ -21,7 +21,7 @@ third_nav_title: 华文学习展示区
     font-weight: 600;
 }
 .btnClass {
-    display: none;
+    display: inline-block;
     padding: 15px 20px;
     text-align: center;
     text-decoration: none;
