Update file: திருவாட்டி  நஸ் ரீன் பானு சூராலி ஹபீப் முகமது.md

--- a/pages/திருவாட்டி  நஸ் ரீன் பானு சூராலி ஹபீப் முகமது.md
+++ b/pages/திருவாட்டி  நஸ் ரீன் பானு சூராலி ஹபீப் முகமது.md
@@ -23,8 +23,7 @@ max-width:100%;
     font-weight: 600;
 }
 </style>
- <body> 
-  <a href="/OPMTL-Award" style="float:left;">Back</a>
+<a href="/OPMTL-Award" style="float:left;">Back</a>
  <img src="#" style="width:100%" />
     <br />
      <h4 style="font-family:'Anjal InaiMathi';">மேற்கோள்</h4>
@@ -41,7 +40,6 @@ max-width:100%;
     <h4 style="font-family:Lato,sans-serif;">Write-up </h4>
     <p style="text-align:justify;font-family:Lato,sans-serif;">While acknowledging the crucial role early childhood teachers play in language acquisition, Mdm Nazreen also strongly believes that children play an active role in their learning. She brings a lot of hands-on and authentic learning experiences into the classroom, effectively using children-initiated learning approaches and project work. She also integrates outdoor learning experiences into her Tamil lessons to develop reflective and inquisitive thinking in her students. Stories come alive in Mdm Nazreen’s class as she also incorporates values and cultural elements into them, nurturing the children’s emotional intelligence and empathy. 
     </p>
-    <p style="text-align:justify;font-family:Lato,sans-serif;">Mdm Nazreen is a firm believer of differentiated learning. She modifies lessons and their goals to suit the different learning needs and styles of the children, allowing an engaging learning process for all. She also adopts a student-centric approach in her lessons and creates developmentally appropriate teaching and learning resources based on her students’ interests and abilities.  
-   </p>
+    <p style="text-align:justify;font-family:Lato,sans-serif;">Mdm Nazreen is a firm believer of differentiated learning. She modifies lessons and their goals to suit the different learning needs and styles of the children, allowing an engaging learning process for all. She also adopts a student-centric approach in her lessons and creates developmentally appropriate teaching and learning resources based on her students’ interests and abilities.  </p>
     <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
  <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
