--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -78,7 +78,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/MK-Horizon-synopses" class="btn1" style="color:#fff;font-size:22px;">简介</a>
-  <a href="/cl-MK-Horizon-exhibition" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
+  <a href="#" class="btn2" style="color:#fff;font-size:22px;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
