--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -20,8 +20,7 @@ third_nav_title: 华文学习展示区
     color: #fff;
     font-weight: 600;
 }
-   
-	.btn1{
+   	.btn1{
 	font-size: 18px;
     font-family: KaiTi;
     background-color: #d84178;;
@@ -41,7 +40,7 @@ third_nav_title: 华文学习展示区
     border-radius: 6px;
     width: 140px;
   text-align: center;
-	display:block;
+	display:none;
 	}
     	.btn-group {
 	margin-top:-15px;
