Update file: கல்வி அமைச்சின் பாலர் பள்ளிகள்.md

--- a/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
+++ b/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
@@ -150,7 +150,8 @@ margin-left:25px;
   <br /><span style="font-family:Anjal New InaiMathi Sch Book; font-size:18px;">Shared Book Approach
 </span></center>
 <br />
-<a href="https://www.nel.moe.edu.sg/qql/slot/u143/Resources/BigBooks/Tamil/NEL-Big-Book-Tamil-Teaching-Steps.pdf" target="_blank">ஆசிரியரின்  துணையுடன் வாசித்தல்  அணுகுமுறையைப்பற்றிக் கூடுதல் விவரங்கள் பெற இந்த இணைப்பைச் சொடுக்கலாம். </a> <h4 id="C4"><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">அதிசய வாரத் திட்டப்பணி (WoW Project)
+<a href="https://www.nel.moe.edu.sg/qql/slot/u143/Resources/BigBooks/Tamil/NEL-Big-Book-Tamil-Teaching-Steps.pdf" target="_blank" style="font-family:Anjal New InaiMathi Sch Book">ஆசிரியரின்  துணையுடன் வாசித்தல்  அணுகுமுறையைப்பற்றிக் கூடுதல் விவரங்கள் பெற இந்த இணைப்பைச் சொடுக்கலாம். </a> 
+<h4 id="C4"><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">அதிசய வாரத் திட்டப்பணி (WoW Project)
  </span></h4>
 <table>
        <tr>
