Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -172,7 +172,7 @@ Mdm Sumathi Krishnasamy <br/>
 Horizon Primary School <br/>
         <br/>
       Mdm Thasneem Parveen D/O Sirazudeen<br/>
-		Tamil Language Teacher 
+		Tamil Language Teacher, 
 	 Horizon Primary School </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
