--- a/pages/中学.md
+++ b/pages/中学.md
@@ -61,7 +61,6 @@ width:100%;
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_2.jpg"><br/>
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_3.jpg"><br/>
      <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/sjAY_gDz9gE" title="中学2021课程 - 文化要素 ( 新年）" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
-     <span style="color:#d14165;font-size:18px;font-family:KaiTi">中学2021课程 - 文化要素 ( 新年)</span>
      <br>
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_4.jpg">
       <br>
@@ -70,8 +69,8 @@ width:100%;
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_6.jpg"><br/>
      <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">华文文学课程
 </h4>
-	<p style="font-size:25px;font-family:KaiTi;text-align:justify;">- "华文文学（完整课程）Literature in Chinese（Full）是剑桥普通水准考试中一个独立的人文科目（Humanities）。华文文学（配对课程）Literature in Chinese（Elective）是综合人文科的一个配对科目。修读配对课程的学生必须同时修读以英文作为媒介语的社会科（Social Studies）。这两个科目配对组成剑桥普通水准考试中的一个完整科目——综合人文科（Combined Humanities）。</p>
-	<p style="font-size:25px;font-family:KaiTi;text-align:justify;">- 完整课程的教学内容包括现当代长篇小说、现当代短篇小说和微型小说、诗歌（古代诗词和现当代诗歌）和课外文学作品赏析，配对课程的教学内容则不包括现当代长篇小说。具体的文本，请参照下表：</p>
+	<p style="font-size:25px;font-family:KaiTi;text-align:justify;">"华文文学（完整课程）Literature in Chinese（Full）是剑桥普通水准考试中一个独立的人文科目（Humanities）。华文文学（配对课程）Literature in Chinese（Elective）是综合人文科的一个配对科目。修读配对课程的学生必须同时修读以英文作为媒介语的社会科（Social Studies）。这两个科目配对组成剑桥普通水准考试中的一个完整科目——综合人文科（Combined Humanities）。</p>
+	<p style="font-size:25px;font-family:KaiTi;text-align:justify;">完整课程的教学内容包括现当代长篇小说、现当代短篇小说和微型小说、诗歌（古代诗词和现当代诗歌）和课外文学作品赏析，配对课程的教学内容则不包括现当代长篇小说。具体的文本，请参照下表：</p>
 	<li style="font-size:25px;font-family:KaiTi;text-align:justify;">观赏改编戏剧，分析小说文本</li>
 	<br/>
 <img src="/images/MTLS2022_CL_Curriculum_V2_SecSch_7.jpg"><br/>
