--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -72,7 +72,7 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-family:KaiTi;text-align: left;padding: 8px;background-color:#d84178;color:#fff">培养双语幼儿<br />教育部幼儿园（励众）<br/>
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> [MK@Horizon] </span><br />
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [MOE Kindergarten@Horizon] </span><br />
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
@@ -89,7 +89,7 @@ text-decoration:none;
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">文化英雄联盟之我是小战士
   <br />教育部幼儿园（伟林） <br/>
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> [MK@Wellington]</span>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [MOE Kindergarten@Wellington]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
@@ -105,7 +105,7 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">探索生活，趣学华语 <br/>博乐学幼儿园<br/>
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> [Genius Hive Preschool] </span></td>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [Genius Hive Pre-school Pte Ltd] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
@@ -134,7 +134,7 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">保护当地野生动物 - 穿山甲和水獭<br />职总优儿学府幼乐园@文礼180B座分校<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">保护当地野生动物 —— 穿山甲和水獭<br />职总优儿学府幼乐园@文礼180B座分校<br/>
 			<span style="font-family:Lato,sans-serif;font-size:20px;"> [My First Skool at Blk 180B Boon Lay]  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
