--- a/pages/职总优儿学府幼乐园@文礼180B座分校.md
+++ b/pages/职总优儿学府幼乐园@文礼180B座分校.md
@@ -3,9 +3,6 @@ title: 职总优儿学府幼乐园@文礼180B座分校
 permalink: /cl-MFS-Boonlay-exhibition
 description: ""
 ---
-
-
-
 <style>
    .btntop {
     position: fixed;
@@ -35,7 +32,7 @@ description: ""
 }
 </style>
 <a href="/exhibits/chinese-exhibitions-c/preschool" style="float:left;" class="backbtn">Back</a><br>
-<h4 style="font-size:40px;font-family:KaiTi;color:#d84178;">保护当地野生动物 - 穿山甲和水獭</h4>
+<h4 style="font-size:40px;font-family:KaiTi;color:#d84178;">保护当地野生动物——穿山甲和水獭</h4>
 <img src="/images/Posters/cl-MFS-BoonLay_v3.jpg">
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
