--- a/pages/教育部幼儿园（励众）(简介).md
+++ b/pages/教育部幼儿园（励众）(简介).md
@@ -3,9 +3,6 @@ title: 教育部幼儿园（励众）(简介)
 permalink: /MK-Horizon-synopses
 description: ""
 ---
-
-
-
 <style>   
 	.btntop {
     position: fixed;
@@ -40,12 +37,12 @@ description: ""
 <a href="/exhibits/chinese-exhibitions-c/preschool" style="float:left;" class="backbtn">Back</a><br/>
 <h4 style="font-size: 35px;font-family: KaiTi; padding-top:12px ;margin:10px;
 color:#d84178;text-align:justify;">培养双语幼儿</h4>
-<p style="font-size: 20px;font-family: KaiTi;text-align:justify;"> 教育部幼儿园的繁星课程为学生提供沉浸式学习体验，让他们在生活中学习并使用双语。</p>
-<p style="font-size: 20px;font-family:KaiTi;text-align:justify; "> 教育部幼儿园（励众）也通过“培养双语幼儿”计划，在自然语境下(如：户外活动和茶点时间)，以活动让学生使用母语交流，增强表达能力，体会学习母语的快乐。</p>
+<p style="font-size: 20px;font-family: KaiTi;text-align:justify;">教育部幼儿园的繁星课程为学生提供沉浸式学习体验，让他们在生活中学习并使用双语。</p>
+<p style="font-size: 20px;font-family:KaiTi;text-align:justify; ">教育部幼儿园（励众）也通过“培养双语幼儿”计划，在自然语境下(如：户外活动和茶点时间)，以活动让学生使用母语交流，增强表达能力，体会学习母语的快乐。</p>
 <p style="font-size: 20px;font-family:KaiTi;text-align:justify;">此外，学生也通过奥秘探索周计划探索相关课题，掌握母语沟通技巧，并参与文化游戏和“快乐阅读”计划。</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Raising a Bilingual Child</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The MOE Kindergarten curriculum offers many opportunities for children to listen and speak in English and their Mother Tongue Languages (MTL).<br/><br/>
-At MK@Horizon, the Starlight Literacy programme for MTL, uses routines and learning-centre time to encourage children to interact with one another in their MTL within a variety of meaningful contexts. Children also develop an appreciation for local ethnic cultures. <br/><br/>
+At MK@Horizon, the Starlight Literacy Programme for MTL, uses routines and learning-centre time to encourage children to interact with one another in their MTL within a variety of meaningful contexts. Children also develop an appreciation for local ethnic cultures. <br/><br/>
 The weekly, dedicated learning-centre time allows children to learn more about Chinese, Malay or Indian culture through purposeful play. Through the “Read for Joy” programme, interactive games and “Weeks of Wonder” projects, children develop both an interest and confidence in communicating in their MTL.<br/><br/>
 Learning MTL interactively is both natural and enjoyable for children. </p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
