--- a/pages/教育部幼儿园（伟林）(简介).md
+++ b/pages/教育部幼儿园（伟林）(简介).md
@@ -3,9 +3,6 @@ title: 教育部幼儿园（伟林）(简介)
 permalink: /MK-Wellington-synopses
 description: ""
 ---
-
-
-
 <style>
    .btntop {
     position: fixed;
@@ -40,7 +37,7 @@ color: #d84178;text-align:justify;">
 文化英雄联盟之我是小战士</h4>
 <p style="font-size: 20px;font-family: KaiTi;text-align:justify;">   “文化英雄联盟之我是小战士”是教育部幼儿园（伟林）的母语文化计划。 这项计划让幼儿在真实情境下使用母语交流；通过有趣的活动，学习与欣赏文化与传统习俗。</p>
 <p style="font-size: 20px;font-family:KaiTi; text-align:justify;">为了促进家园合作，幼儿园也鼓励家长与幼儿一起参与亲子活动，让幼儿在课堂外继续学习母语，同时提高他们对本地文化的认识。</p>
-<h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;"> ‘I am a Cultural Ambassador!’
+<h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;line-height: 1.5"> ‘I am a Cultural Ambassador!’
 Nurturing the Joy of Learning Mother Tongue Languages and Culture</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">‘I am a Cultural Ambassador!’ is a Mother Tongue Language (MTL) programme at MOE Kindergarten @ Wellington.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The programme aims to nurture a joy of learning MTL and develop children’s awareness and appreciation of both their own cultural heritage and the diverse cultures of Singapore. Through authentic, fun and meaningful activities, children explore topics related to local cultures that develop their cultural identity and understanding of their own and other cultures.</p>
