--- a/pages/美廉小学.md
+++ b/pages/美廉小学.md
@@ -33,15 +33,13 @@ description: ""
 </style>
 <a href="/exhibits/chinese-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size:40px;font-family:KaiTi;color:#d14165;">秘密花园, 师生同乐</h4>
-<img src="/images/Posters/MTLS_JurongSec_v5.jpg">
+<img src="/images/Posters/MTLS_Meridian Pri_v4.jpg">
 <br/><br/><br/>
 <iframe width="800" height="320" src="https://www.youtube.com/embed/DV9-l4Y9bnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><b><span style="font-family:KaiTi; font-size:22px">美廉游戏日</span></b>
 <br/><br/><br/>
 <iframe width="800" height="320" src="https://www.youtube.com/embed/2imVFv3yrEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><b><span style="font-family:KaiTi; font-size:22px">美廉购物日</span></b>
 <br/><br/><br/>
 <iframe width="800" height="320" src="https://www.youtube.com/embed/ZG2VHbm0wd4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><b><span style="font-family:KaiTi; font-size:22px">美廉职业日</span></b>
-
 <br/><br/>
-
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
