--- a/pages/推广华文学习委员会.md
+++ b/pages/推广华文学习委员会.md
@@ -33,7 +33,8 @@ description: ""
 </style>
 <a href="/exhibits/chinese-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 40px;font-family: KaiTi;padding-top:12px;margin:10px;color: #d84178;text-align:justify;">推广华文学习委员会</h4>
-<br><img src="/images/Posters/MTLS_CPCLL_v5.jpg">
+<br>
+<img src="/images/Posters/MTLS_CPCLL_v4.jpg">
 <br>
 <a href="https://www.cpcllmtls22.com" target="_blank">www.cpcllmtls22.com</a>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
