Update file: பூன் லே உயர்நிலைப்பள்ளி.md

--- a/pages/பூன் லே உயர்நிலைப்பள்ளி.md
+++ b/pages/பூன் லே உயர்நிலைப்பள்ளி.md
@@ -33,7 +33,7 @@ description: ""
 </style>
 <a href="/exhibits/tamil-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size:35px;Anjal InaiMathi;color:#9b4490;">வகுப்பறைக்கு அப்பாலும் தமிழ்மொழியின் பயன்பாட்டை ஊக்குவிக்கும் இளம் ஊடகப் படைப்பாளர் திட்டம்</h4>
-<img src="/images/Posters/Boon-Lay-Sec-TL-V3.jpg">
+<img src="/images/Posters/Boon-Lay-Sec-TL -V4.jpg"/>
 <br/><br/>
 <iframe width="800" height="320" src="https://www.youtube.com/embed/videoseries?list=PLl8XCxxfzudpmF69qCXYtN7KZH4SbvSYp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><b><span style="font-family:Anjal InaiMathi; font-size:16px;">மாணவர்களின் படைப்புகள்</span></b>
 <br/><br/>
