--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -40,7 +40,7 @@ third_nav_title: 华文学习展示区
     border-radius: 6px;
     width: 140px;
   text-align: center;
-	display:none;
+	display:block;
 	}
     	.btn-group {
 	margin-top:-15px;
