--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
@@ -76,7 +76,8 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்<br/>கல்வி அமைச்சின் ஹொரைஸன் பாலர் பள்ளி <br/>
-			<span style="font-family:Lato,sans-serif;">[MK @ Horizon] </span><br />
+			<span style="font-family:Lato,sans-serif;">[MOE Kindergarten @ Horizon
+] </span><br />
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
@@ -94,7 +95,8 @@ text-decoration:none;
   text-align: left;padding: 8px;background-color:#9b4490; color:#fff">நான் என் பண்பாட்டின் பிரதிநிதி
 		<br />கல்வி அமைச்சின் வெலிங்டன் பாலர் பள்ளி
 <br/>
-			<span style="font-family:Lato,sans-serif;">[MK @ Wellington]</span>
+			<span style="font-family:Lato,sans-serif;">[MOE Kindergarten @ Wellington
+]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
