Update file: கல்வி அமைச்சின் பாலர் பள்ளிகள்.md

--- a/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
+++ b/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
@@ -136,7 +136,7 @@ margin-left:25px;
          <td><p style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">ஆசிரியர் துணையோடு வாசித்தல் என்னும்   அணுகுமுறை பெரிய புத்தகங்களின்வழிப்   பிள்ளைகளுக்கு மகிழ்ச்சிமிக்க கற்றல்   அனுபவத்தை ஏற்படுத்தித் தருகிறது. இது பிள்ளைகளின் ஈடுபாட்டை அதிகரிப்பதோடு   கேட்டல், பேசுதல், படித்தல் ஆகிய   மொழித்திறன்களை வளர்த்துக்கொள்ளவும்   துணைபுரிகிறது.</p><br /><br />
           </td>
  <td>
- 	<img src="/images/TL-PreSchool-5.jpg" />
+ 	<img src="/images/TL-PreSchool-7.jpg" />
 </td>
     </tr>
  </table>
@@ -166,12 +166,12 @@ margin-left:25px;
   <table>
        <tr>
          <td>
-         	<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">விருப்பமான தலைப்பு ஒன்றைப்பற்றி மற்றவருடன் இணைந்து ஆராயும்போது பிள்ளைகளை உடனிணைந்து செயலாற்ற ஊக்குவித்தல்</li><br/>
-         	<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">பல்வேறு மூலங்களிலிருந்து தகவல்களைத் திரட்டுவதன்வழியும் தங்களது கண்டுபிடிப்புகளை மற்றவரோடு பகிர்ந்துகொள்வதன்வழியும் பிள்ளைகளின் செயல்முறைத் திறன்களை வளர்த்தல்</li><br/>
+         	<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">விருப்பமான தலைப்பு ஒன்றைப்பற்றி மற்றவருடன் இணைந்து ஆராயும்போது பிள்ளைகளை உடனிணைந்து செயலாற்ற ஊக்குவித்தல்</li>
+         	<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">பல்வேறு மூலங்களிலிருந்து தகவல்களைத் திரட்டுவதன்வழியும் தங்களது கண்டுபிடிப்புகளை மற்றவரோடு பகிர்ந்துகொள்வதன்வழியும் பிள்ளைகளின் செயல்முறைத் திறன்களை வளர்த்தல்</li>
          	<li style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">அதிசய வாரத் திட்டப் பணிகளைத் தாய்மொழிகளில் மேற்கொள்வதன்வழிப் பிள்ளைகளின் கருத்துப்பரிமாற்றத்திறனை மேம்படுத்துதல்</li>
           </td>
  <td>
- 	<img src="/images/TL-PreSchool-7.jpg" />
+ 	<img src="/images/TL-PreSchool-5.jpg" />
 </td>
     </tr>
  </table>
