--- a/pages/小学.md
+++ b/pages/小学.md
@@ -229,7 +229,8 @@ width:100%;
 <br />
 <h4 style="text-align:center;font-family:KaiTi;font-size:35px;">课程资源 </h4>
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_3.jpg"><br/>
-<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">听说剧场</h4>
+<table><td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
+	font-weight: 700;">  8.   关注学习过程，落实有效评价 </td></table>
 <li style="text-align: left;font-family:KaiTi;font-size:25px;">动画放映室／录像放映室</li>
 <p style="font-family:KaiTi;font-size:25px">通过有趣的动画或录像，提高学生的口语表达能力。</p>
 <center>
