--- a/pages/小学.md
+++ b/pages/小学.md
@@ -354,7 +354,7 @@ width:100%;
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">三、四年级游戏集（ABLE）</span>
  </center>
 <table><td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
-	font-weight: 700;"> 趣味录像、口语/写作练习td></table>
+	font-weight: 700;"> 趣味录像、口语/写作练习</td></table>
 <p style="font-family:KaiTi;font-size:25px">一天一点系列</p>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/VNGppNYxN88" title="一天一点 之不见？走失？(Get Lost)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
