--- a/pages/高中.md
+++ b/pages/高中.md
@@ -194,7 +194,7 @@ width:80%;
 	<br>
 <a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" class="btn01" style="color:#fff;font-family:KaiTi;"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
 </a><br />
-  <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank" class="btn01" style="color:#fff;"> <span style="font-size:20px;font-family:Lato,sans-serif">H1MTL &amp; MTL‘B’ Syllabus Document
+  <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank" class="btn01" style="color:#fff;"> <span style="font-size:20px;font-family:Arial">H1MTL &amp; MTL‘B’ Syllabus Document 1
  </span></a>
   <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学
 </h4>
