--- a/pages/慈济大爱幼教中心.md
+++ b/pages/慈济大爱幼教中心.md
@@ -34,7 +34,9 @@ description: ""
  <p><a href="/exhibits/chinese-exhibitions-c/preschool" style="float:left;" class="backbtn">Back</a><br /></p>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d84178;">教之以礼 育之以德</h4>
 <p><img src="/images/Posters/MTLS_Tzu-Chi-Great-Love-PreSchool_FA_v4.jpg" />
-<br /><br /></p>
-<a href="https://www.youtube.com/watch?v=lRHolw2dTuc " target="_Blank"><span style="font-family:KaiTi; font-size:20px;">品德教育</span>｜Instilling self-love and respect from young</a>
+<br /></p>
+<a href="https://www.youtube.com/watch?v=lRHolw2dTuc" target="_Blank"><span style="font-family:KaiTi; font-size:20px;">品德教育</span>｜Instilling self-love and respect from young</a><br/>
+<a href="https://www.youtube.com/watch?v=ap7e-UvPb_4" target="_Blank"><span style="font-family:KaiTi; font-size:20px;">生活教育</span>｜Inculcating living skills from young</a><br/>
+<a href="https://www.youtube.com/watch?v=9PGsQaFZ2mU" target="_Blank"><span style="font-family:KaiTi; font-size:20px;">生命教育</span>｜Inspiring love for the surrounding from young</a><br/>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
