--- a/pages/新加坡国立教育学院.md
+++ b/pages/新加坡国立教育学院.md
@@ -36,6 +36,6 @@ description: ""
 <p><img src="/images/Posters/cl-NIE-CL-V3-01.jpg" />
 <br /></p><iframe width="560" height="315" src="https://www.youtube.com/embed/g1gA9yoFpng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <span style="font-family:Kaiti; font-size:20px;">更多新加坡华语特有词语介绍 </span><br/><br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rYtHDvnLses" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <span style="font-family:Kaiti; font-size:20px;">“吃风”介绍/ “敢敢”介绍 </span>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rYtHDvnLses" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <span style="font-family:Kaiti; font-size:20px;">“吃风”介绍/ “敢敢”介绍 </span><br/>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
