--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -44,14 +44,14 @@ td{
 <a href="#C5" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0;text-align:center;"> 05 ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்</a>
  <a href="#C6" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0;text-align:center;"> 06 தகவல் தொடர்புத் தொழில்நுட்பம்</a>
  <a href="#C7" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0; text-align:center;"> 07 பெற்றோர் பங்கு</a>
- <h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">தொடக்கப்பள்ளிப் பாடக்கலைத்திட்டம்
+ <h4 id="C1"><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">தொடக்கப்பள்ளிப் பாடக்கலைத்திட்டம்
 </span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_2.jpg" /><br />
-<img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_3.jpg">
+<img id="C2" src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_3.jpg">
 <br/>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_4.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">கற்றல் வளங்களும் நடவடிக்கைகளும்
+<h4 id="C3" ><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">கற்றல் வளங்களும் நடவடிக்கைகளும்
 </span></h4>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">சூழமைவுசார்ந்த பாடப்பொருள்</li>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">புதிய பாடப்பொருளும் ஆராய்ந்தறிதலும்</li>
@@ -62,17 +62,17 @@ td{
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_5.jpg"><br/>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_6-min.jpg">
 <br/>
-<img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_7.jpg">
+<img id="C4" src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_7.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்
+<h4 id="C5" ><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்
 </span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_8.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">தகவல் தொடர்புத் தொழில்நுட்பம் 
+<h4 id="C6" ><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">தகவல் தொடர்புத் தொழில்நுட்பம் 
 </span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_9.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">பெற்றோர் பங்கு 
+<h4 id="C7" ><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">பெற்றோர் பங்கு 
 </span></h4>
 <table>
        <tr>
