--- a/pages/滨海艺术中心.md
+++ b/pages/滨海艺术中心.md
@@ -34,6 +34,8 @@ description: ""
  <p><a href="/exhibits/chinese-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br /></p>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d84178;">滨海艺术中心</h4>
 <p><img src="/images/Posters/MTLS_Esplanade_v5_Chinese.jpg" />
-<br /><br /></p>
+<br /></p>
+<a href="https://www.esplanade.com/offstage/arts/singapore-island-stories?sc_lang=zh-CN" target="__blank"><span style="font-family:KaiTi; font-size:20px;">新加坡岛屿故事</span></a><br/>
+<a href="https://www.esplanade.com/offstage/arts/rekindle-enter-the-dragon?sc_lang=zh-CN " target="__blank"><span style="font-family:KaiTi; font-size:20px;">延承：与龙同行</span></a><br/>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
