--- a/pages/எஸ்பிளனேட்.md
+++ b/pages/எஸ்பிளனேட்.md
@@ -34,6 +34,8 @@ description: ""
  <p><a href="/exhibits/tamil-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br /></p>
 <h4 style="font-size:35px;font-family:Anjal InaiMathi;color:#9b4490;">எஸ்பிளனேட் - கடலோரக் கலை அரங்கம்</h4>
 <p><img src="/images/Posters/MTLS_Esplanade_v5_Tamil.jpg" />
-<br /><br /></p>
+<br /></p>
+<a href="https://www.esplanade.com/offstage/arts/singapore-island-stories?sc_lang=ta-IN" target="_blank"><span style="font-family:Anjal InaiMathi;">எஸ்பிளனேட் - கடலோரக் கலை அரங்கம்</span></a><br/>
+<a href="https://www.esplanade.com/offstage/arts/the-story-of-dalim-kumar?sc_lang=ta-IN" target="_blank"><span style="font-family:Anjal InaiMathi;">தலிம் குமாரின் கதை  </span></a><br/>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
