--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -61,9 +61,9 @@ td{
 </h4>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_5.jpg"><br/>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/39R_NiRBC08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;align:center;" allowfullscreen=""></iframe><br />
-    <p style="font-weight:bold;text-align:center;">Video 1</p>
+    <p style="font-weight:;text-align:center;">Video 1</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Phqg9KlD0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;align:center;" allowfullscreen=""></iframe>
-    <p style="font-weight:bold;text-align:center;">Video 2</p>
+    <p style="font-weight:;text-align:center;">Video 2</p>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_6-min.jpg">
 <br/>
 <img id="C4" src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_7.jpg">
