--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -124,18 +124,18 @@ width:90%;
  அடுத்தாண்டு உயர்நிலை இரண்டு மாணவர்கள் கவிதை இலக்கியத்தைப் படித்து மகிழ்வர். </p>
 <div class="row">
   <div class="column">
-    <img src="/images/TL Sec 1.png" style="width:25%">
+    <img src="/images/TL Sec 1.png" style="width:100%">
   </div>
   <div class="column">
-    <img src="/images/TL-Sec-2.png" style="width:25%">
+    <img src="/images/TL-Sec-3.png" style="width:100%">
   </div>
   </div>
-<div class="rowimg1">
-  <div class="columnimg1">
-    <img src="/images/TL-Sec-3.png" style="width:25%">
+<div class="row">
+  <div class="column">
+    <img src="/images/TL-Sec-2.png" style="width:100%">
   </div>
-  <div class="columnimg1">
-    <img src="/images/Tl-Sec-4.png" style="width:25%">
+  <div class="column">
+    <img src="/images/Tl-Sec-4.png" style="width:100%">
   </div>
 </div>
 <p style="text-align:center;font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
