--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -100,14 +100,14 @@ description: ""
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">点子二: 我是小小导游 </h4>
   <p style="font-size:25px;font-family:KaiTi">
-你可以利用再循环材料与孩子一起制作交通工具（如：折纸船 <a href="http://tinyurl.com/paperboat2022" target="_blank;"> http://tinyurl.com/paperboat2022</a>，然后结合点子一的新加坡景点贴画，让孩子为家人设计一日游，并请孩子说一说。
+你可以利用再循环材料与孩子一起制作交通工具（如：折纸船 <a href="http://tinyurl.com/paperboat2022" target="_blank;"> http://tinyurl.com/paperboat2022</a>)，然后结合点子一的新加坡景点贴画，让孩子为家人设计一日游，并请孩子说一说。
 </p>
 </td>
   </table><br />
       <table width="300px" border="0" cellpadding="0" cellspacing="0" style="-moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; border: 3px solid #ccc;">
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">
-    点子三：小小瑜伽初学者（认识笔画）</h4>
+    点子三：小小瑜伽初学者</h4>
    <p style="font-size:25px;font-family:KaiTi;">        孩子可以根据自己的兴趣和能力，使用身体部位（如：手、脚）比划不同的笔画：
 <br/>
      <img src="/images/presch1.png" />
