--- a/pages/纪宏老师.md
+++ b/pages/纪宏老师.md
@@ -35,7 +35,7 @@ max-width:100%;
     <p style="text-align:justify;font-family:KaiTi;">纪宏老师在课堂中通过声调、教具和肢体语言营造轻松、欢乐的学习氛围。她以幼儿为中心，善用正面的语言，通过有效提问鼓励幼儿发挥想象力，并尊重幼儿的想法。纪老师精心制作富有创意的教具，不但让幼儿动手操作，还提供幼儿之间协作的机会，增添了活动的趣味性，又能让他们主动、积极地投入学习活动，体验华文学习的乐趣。
     </p>
     <p style="text-align:justify;font-family:KaiTi;">纪老师相信在教学中要与幼儿做“朋友“，建立良好的师生关系。她总会以鼓励的语气和幼儿说话，示范礼貌用语，给予幼儿足够的安全感，让幼儿感受到她的关爱和尊重，从而帮助幼儿建立起自信心，促使他们主动、积极地学习。</p>
-     <p style="text-align:justify;font-family:KaiTi;"> 纪老师对自己的幼教工作充满热忱。她的信条是要“做一个有准备的母语老师”。她希望运用游戏、音乐、儿歌、美术活动吸引不同语言背景的幼儿参与活动，调动他们的学习积极性。同时，她也重视家园合作，与家长合力激发幼儿对华文的兴趣。</p>
+     <p style="text-align:justify;font-family:KaiTi;"> 纪老师对自己的幼教工作充满热忱。她的信条是要“做一个有准备的母语老师”。她希望运用游戏、音乐、儿歌、美术活动吸引不同语言背景的幼儿参与活动，调动他们的学习积极性。同时，她也重视家长合作，与家长合力激发幼儿对华文的兴趣。</p>
 <h4 style="font-family:Lato,sans-serif;">Quote </h4>
     <p style="text-align:justify;font-family:Lato,sans-serif;">Children are curious learners and confident explorers. As a pre-school Chinese Language teacher, I strive to plan activities that excite children, pique and sustain their interests, and build their confidence in using Chinese in different contexts so as to enable them to use Chinese more frequently and confidently. 
     </p>
